--- a/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/css/stylish-portfolio.css
+++ b/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/css/stylish-portfolio.css
@@ -12,6 +12,7 @@ html {
 
 body {
   font-family: 'Source Sans Pro';
+  font-size: 96%;
 }
 
 .btn-xl {
@@ -243,7 +244,7 @@ h6 {
   position: relative;
   overflow: hidden;
   max-width: 530px;
-  margin: auto auto 1rem;
+ /* margin: auto auto 1rem;*/
 }
 
 .portfolio-item .caption {
@@ -259,7 +260,7 @@ h6 {
 
 .portfolio-item .caption .caption-content {
   color: #fff;
-  margin: auto 2rem 2rem;
+  /*margin: auto 2rem 2rem;*/
 }
 
 .portfolio-item .caption .caption-content h2 {
@@ -284,9 +285,11 @@ h6 {
   }
   .portfolio-item .caption .caption-content {
     transition: opacity 0.25s;
-    margin-left: 3%;
+    margin: auto;
+   /* margin-left: 3%;
     margin-right: 3%;
     margin-bottom: 35%;
+    */
   }
   .portfolio-item img {
     -webkit-transition: -webkit-clip-path 0.25s ease-out;
@@ -303,6 +306,11 @@ h6 {
     clip-path: inset(2%);
   }
 }
+
+ul {
+padding: 0 6%;
+}
+
 .card-text {
   text-align: justify;
 }
