--- a/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/css/stylish-portfolio.css
+++ b/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/css/stylish-portfolio.css
@@ -307,6 +307,19 @@ h6 {
   }
 }
 
+
+@media screen and (min-width: 601px) {
+  span.comtrade-scroll {
+    font-size: 95%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  span.comtrade-scroll {
+    font-size: 80%;
+  }
+}
+
 ul {
 padding: 0 6%;
 }
