--- a/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/css/stylish-portfolio.css
+++ b/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/css/stylish-portfolio.css
@@ -309,13 +309,13 @@ h6 {
 
 
 @media screen and (min-width: 601px) {
-  span.comtrade-scroll {
+  span.comtrade-resize {
     font-size: 95%;
   }
 }
 
 @media screen and (max-width: 600px) {
-  span.comtrade-scroll {
+  span.comtrade-resize {
     font-size: 80%;
   }
 }
